@@ -39,6 +39,7 @@ New configuration options in taskwarrior 2.4.0
   - New truncated_count column style for the description field which as the
     name says is a combination of the existing truncated and count styles.
   - New 'hooks' setting is a master control switch for hook processing.
+  - New 'debug.hooks' for debugging hook scripts.
 
 Newly deprecated features in taskwarrior 2.4.0
 
