@@ -204,6 +204,7 @@
 - The filter form 'name:value' now maps to the partial match operator '=',
   rather than the exact match operator, '=='.  This means that dates now
   match on the day by default, not the time also.
+- Supports 'debug.hooks' configuration setting.
 
 ------ current release ---------------------------
 
